<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jmbargueno.comapp.ui.home.OrderFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_order_list" />

    <fragment
        android:id="@+id/navigation_myorders"
        android:name="com.jmbargueno.comapp.ui.myorders.MyOrdersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_my_orders_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.jmbargueno.comapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
