<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTextSignUpPasswordTwo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/editTextSignUpUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/string_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/string_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpUsername" />

    <EditText
        android:id="@+id/editTextPasswordTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/string_validate_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpPassword" />

    <EditText
        android:id="@+id/editTextSignUpCommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/string_community"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordTwo"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordTwo"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordTwo" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/string_signup"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpCommunity"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpCommunity"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpCommunity" />
</androidx.constraintlayout.widget.ConstraintLayout>